// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Artifact > getPackageExports() > adds exports based on input file and output name 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "default": "./lib/index.js",
      "types": undefined,
    },
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > adds exports based on input file and output name when shared lib required 1`] = `
{
  ".": {
    "default": "./lib/node/index.js",
    "node": {
      "default": "./lib/node/index.js",
      "types": undefined,
    },
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > changes export namespace to "browser" when a \`browser\` platform 1`] = `
{
  ".": {
    "browser": {
      "default": "./lib/index.js",
      "types": undefined,
    },
    "default": "./lib/index.js",
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > changes export namespace to "react-native" when a \`native\` platform 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "react-native": {
      "default": "./lib/index.js",
      "types": undefined,
    },
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > skips \`default\` export when there is no \`lib\` build 1`] = `
{
  "./sub": {
    "node": {
      "import": {
        "default": "./mjs/sub.mjs",
        "types": undefined,
      },
      "require": {
        "default": "./cjs/sub.cjs",
        "types": undefined,
      },
    },
  },
}
`;

exports[`Artifact > getPackageExports() > solid > adds entry point to source code 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "default": "./lib/index.js",
      "types": undefined,
    },
    "solid": "./src/index.ts",
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > solid > supports non-bundle 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "default": "./lib/index.js",
      "types": undefined,
    },
    "solid": "./src/index.ts",
    "types": undefined,
  },
  "./*": {
    "default": "./lib/*.js",
    "node": {
      "default": "./lib/*.js",
      "types": undefined,
    },
    "solid": "./src/*.js",
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > solid > supports shared lib 1`] = `
{
  ".": {
    "default": "./lib/node/index.js",
    "node": {
      "default": "./lib/node/index.js",
      "types": undefined,
    },
    "solid": "./src/index.ts",
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > solid > supports types 1`] = `
{
  ".": {
    "browser": {
      "default": undefined,
      "import": "./esm/index.js",
      "module": "./esm/index.js",
      "types": "./esm/index.d.ts",
    },
    "solid": "./src/index.ts",
  },
}
`;

exports[`Artifact > getPackageExports() > supports .d.cts 1`] = `
{
  ".": {
    "node": {
      "import": "./cjs/index-wrapper.mjs",
      "require": "./cjs/index.cjs",
      "types": "./cjs/index.d.cts",
    },
  },
}
`;

exports[`Artifact > getPackageExports() > supports .d.mts 1`] = `
{
  ".": {
    "node": {
      "import": "./mjs/index.mjs",
      "types": "./mjs/index.d.mts",
    },
  },
}
`;

exports[`Artifact > getPackageExports() > supports cjs 1`] = `
{
  ".": {
    "node": {
      "import": "./cjs/index-wrapper.mjs",
      "require": "./cjs/index.cjs",
      "types": undefined,
    },
  },
}
`;

exports[`Artifact > getPackageExports() > supports cjs with types 1`] = `
{
  ".": {
    "node": {
      "import": "./cjs/index-wrapper.mjs",
      "require": "./cjs/index.cjs",
      "types": "./cjs/index.d.ts",
    },
  },
}
`;

exports[`Artifact > getPackageExports() > supports conditional exports when there are multiple builds 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "import": {
        "default": "./mjs/index.mjs",
        "types": undefined,
      },
      "require": {
        "default": "./cjs/index.cjs",
        "types": undefined,
      },
    },
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > supports conditional exports with types when there are multiple builds 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "import": {
        "default": "./mjs/index.mjs",
        "types": "./mjs/index.d.ts",
      },
      "require": {
        "default": "./cjs/index.cjs",
        "types": "./cjs/index.d.ts",
      },
    },
    "types": "./lib/index.d.ts",
  },
}
`;

exports[`Artifact > getPackageExports() > supports lib 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "default": "./lib/index.js",
      "types": undefined,
    },
    "types": undefined,
  },
}
`;

exports[`Artifact > getPackageExports() > supports lib with types 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "default": "./lib/index.js",
      "types": "./lib/index.d.ts",
    },
    "types": "./lib/index.d.ts",
  },
}
`;

exports[`Artifact > getPackageExports() > supports mjs 1`] = `
{
  ".": {
    "node": {
      "import": "./mjs/index.mjs",
      "types": undefined,
    },
  },
}
`;

exports[`Artifact > getPackageExports() > supports mjs with types 1`] = `
{
  ".": {
    "node": {
      "import": "./mjs/index.mjs",
      "types": "./mjs/index.d.ts",
    },
  },
}
`;

exports[`Artifact > getPackageExports() > supports subpath file exports when output name is not "index" 1`] = `
{
  "./sub": {
    "default": "./lib/sub.js",
    "node": {
      "default": "./lib/sub.js",
      "types": undefined,
    },
    "types": undefined,
  },
}
`;
